Added CRUD pages for students

--- a/Mon3CoreRazorPages/appsettings.json
+++ b/Mon3CoreRazorPages/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UniversityContext": "Server=(localdb)\\mssqllocaldb;Database=UniversityContext-a610dbd9-321c-4ac1-bd07-b139f5e5443e;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
